==> iceant/LightRTOS/Application/N32L406-MCB/board.c <==
#include "board.h"
#include <string.h>
#include <os_kernel.h>
////////////////////////////////////////////////////////////////////////////////
////

#ifdef __GNUC__
    #define PUTCHAR_PROTOTYPE int __io_putchar(int ch)
    #define GETCHAR_PROTOTYPE int __io_getchar(void)
#else
    #define PUTCHAR_PROTOTYPE int fputc(int ch, FILE *f)
    #define GETCHAR_PROTOTYPE int fget(FILE* f)
#endif

#define CONSOLE_USART UART5

PUTCHAR_PROTOTYPE
{
    USART_SendData(CONSOLE_USART, (uint8_t)ch);
    while (USART_GetFlagStatus(CONSOLE_USART, USART_FLAG_TXDE) == RESET)
        ;
    
    return (ch);
}

GETCHAR_PROTOTYPE
{
    /* Loop until the USARTy Receive Data Register is not empty */
    while (USART_GetFlagStatus(CONSOLE_USART, USART_FLAG_RXDNE) == RESET)
    {
    }
    /* Store the received byte in RxBuffer */
    return USART_ReceiveData(CONSOLE_USART);
}

////////////////////////////////////////////////////////////////////////////////
////

void board_init(void)
{
    NVIC_SetVectorTable(NVIC_VectTab_FLASH, 0x0000);
    SCB->CCR|=SCB_CCR_STKALIGN_Msk; // 栈对齐
    
    /* Configure the NVIC Preemption Priority Bits */
    NVIC_PriorityGroupConfig(NVIC_PriorityGroup_0);
    
    NVIC_SetPriority(PendSV_IRQn, 0xFF);
    SysTick_Config(SystemCoreClock/CPU_TICKS_PER_SECOND); /* 1ms = tick */
    
    /* Hardware Configurations */
    BSP_UART5_Init();
    BSP_USART1_Init();
    BSP_USART2_Init();
    BSP_USART3_Init();
    BSP_UART4_Init();

}

////////////////////////////////////////////////////////////////////////////////
////
